# DocMate-AI-powered-chatbot-for-Project-Assistance

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  chainlit_app.py  docker-compose.yml  pyproject.toml  requirements.txt
deployment/: deployment.yaml
notebooks/: AWS_S3_Storage.ipynb  index-confluence.ipynb  indexing.ipynb  test-data-layer.py  test.ipynb
utils/: custom-data-layer.py  indexing.py
